# romyq

./: .env.example  .gitignore  ALPHA_CHECKLIST.md  CHANGELOG.md  README.md  RELEASE.md  audit_extractor.py  audit_report.py  bootstrap.py  claude_runner.py  completion_evaluator.py  inspector.py  main.py  manager.py  mission.md  mission.py  prompts.py  pyproject.toml  repository_state.py  state.json  state.md  state.py  task_history.py  validator.py  workspace.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
romiq/: cli.py  loop.py  mission.py  validator.py  workspace.py
romiq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
romyq/: __init__.py  __main__.py  activity.py  cancel.py  capabilities.py  cli.py  constitution.py  context.py  dashboard.py  decisions.py  decomposition.py  events.py  findings.py  fingerprint.py  health_checks.py  health_score.py  history.py  knowledge.py  lifecycle.py  loop.py  loop_detector.py  manager.py  memory.py  metrics.py  mission.py  notes.py  plan_repair.py  planning.py  planning_guardrails.py  profile.py  provider.py  readiness.py  recommendation.py  recovery.py  rule_guardrails.py  rules.py  runner.py  runstate.py  shell.py  state.py  (+11 more)
test-workspace/: .gitignore
tests/: test_atomic_writes.py  test_cancellation.py  test_capabilities.py  test_cli_e2e.py  test_constitution.py  test_context.py  test_dashboard.py  test_decisions.py  test_decomposition.py  test_events.py  test_explain_cmd.py  test_failure_tracking.py  test_fingerprint.py  test_health_score.py  test_init_flow.py  test_init_resolve.py  test_knowledge.py  test_knowledge_cli.py  test_lifecycle.py  test_long_running.py  test_loop_detector.py  test_loop_lifecycle_stop.py  test_memory.py  test_memory_cli.py  test_metrics.py  test_phase_tracking.py  test_plan_repair.py  test_planning_context.py  test_planning_guardrails.py  test_profile.py  test_project_timeline.py  test_provider.py  test_provider_choice.py  test_provider_flow.py  test_rate_limit.py  test_readiness.py  test_recommendation.py  test_recommendation_stop.py  test_recovery.py  test_rollback.py  (+16 more)
