[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "romiq"
version = "0.1.0"
description = "Autonomous AI software project manager"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
romiq = "romiq.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["romiq*"]
