[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "romyq"
version = "0.5.0"
description = "Autonomous AI software project manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adarsh", email = "great.adarsh@gmail.com"},
]
requires-python = ">=3.10"
keywords = ["ai", "automation", "cli", "developer-tools", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ui  = ["textual>=0.50"]

[project.urls]
Repository = "https://github.com/adarsh/romyq"
Issues = "https://github.com/adarsh/romyq/issues"

[project.scripts]
romyq = "romyq.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["romyq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["smoke: real-subprocess / real-binary integration tests (skipped without claude in PATH)"]
